--- a/src/components/common/SiteVerification.astro
+++ b/src/components/common/SiteVerification.astro
@@ -1,5 +1,6 @@
 ---
-import { SITE } from 'astrowind:config';
+import {SITE} from 'astrowind:config';
 ---
 
-{SITE.googleSiteVerificationId && <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />}
+{SITE.googleSiteVerificationId &&
+<meta name="google-site-verification" content={SITE.googleSiteVerificationId}/>}
