--- a/src/components/common/SocialShare.astro
+++ b/src/components/common/SocialShare.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from 'astro-icon/components';
+import {Icon} from 'astro-icon/components';
 
 export interface Props {
   text: string;
@@ -7,7 +7,7 @@ export interface Props {
   class?: string;
 }
 
-const { text, url, class: className = 'inline-block' } = Astro.props;
+const {text, url, class: className = 'inline-block'} = Astro.props;
 ---
 
 <div class={className}>
@@ -18,13 +18,16 @@ const { text, url, class: className = 'inline-block' } = Astro.props;
     data-aw-social-share="twitter"
     data-aw-url={url}
     data-aw-text={text}
-    ><Icon
+  >
+    <Icon
       name="tabler:brand-x"
       class="w-6 h-6 text-gray-400 dark:text-slate-500 hover:text-black dark:hover:text-slate-300"
     />
   </button>
-  <button class="ml-2 rtl:ml-0 rtl:mr-2" title="Facebook Share" data-aw-social-share="facebook" data-aw-url={url}
-    ><Icon
+  <button class="ml-2 rtl:ml-0 rtl:mr-2" title="Facebook Share" data-aw-social-share="facebook"
+          data-aw-url={url}
+  >
+    <Icon
       name="tabler:brand-facebook"
       class="w-6 h-6 text-gray-400 dark:text-slate-500 hover:text-black dark:hover:text-slate-300"
     />
@@ -35,7 +38,8 @@ const { text, url, class: className = 'inline-block' } = Astro.props;
     data-aw-social-share="linkedin"
     data-aw-url={url}
     data-aw-text={text}
-    ><Icon
+  >
+    <Icon
       name="tabler:brand-linkedin"
       class="w-6 h-6 text-gray-400 dark:text-slate-500 hover:text-black dark:hover:text-slate-300"
     />
@@ -46,7 +50,8 @@ const { text, url, class: className = 'inline-block' } = Astro.props;
     data-aw-social-share="whatsapp"
     data-aw-url={url}
     data-aw-text={text}
-    ><Icon
+  >
+    <Icon
       name="tabler:brand-whatsapp"
       class="w-6 h-6 text-gray-400 dark:text-slate-500 hover:text-black dark:hover:text-slate-300"
     />
@@ -57,7 +62,8 @@ const { text, url, class: className = 'inline-block' } = Astro.props;
     data-aw-social-share="mail"
     data-aw-url={url}
     data-aw-text={text}
-    ><Icon
+  >
+    <Icon
       name="tabler:mail"
       class="w-6 h-6 text-gray-400 dark:text-slate-500 hover:text-black dark:hover:text-slate-300"
     />
