--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -2,8 +2,11 @@
 import logo from '~/assets/images/logo-bienes-raices.png';
 import {Icon} from 'astro-icon/components';
 import ToggleMenu from '~/components/common/ToggleMenu.astro';
-import {trimSlash} from '~/utils/permalinks';
+import {trimSlash, getAsset} from '~/utils/permalinks';
 import Image from '~/components/common/Image.astro';
+import ToggleTheme from '~/components/common/ToggleTheme.astro';
+import Button from '~/components/ui/Button.astro';
+
 
 interface Link {
   text?: string;
@@ -34,7 +37,10 @@ const {
   isSticky = false,
   isDark = false,
   isFullWidth = false,
+  showToggleTheme = false,
   position = 'center',
+  showRssFeed = false,
+
 } = Astro.props;
 
 const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
@@ -65,7 +71,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
   >
     <div class:list={[{'mr-auto rtl:mr-0 rtl:ml-auto': position === 'right'}, 'flex justify-between']}>
       <a class="flex items-center">
-        <Image src={logo} alt="Logo de EHR Bienes Raíces" width={130} />
+        <Image src={logo} alt="Logo de EHR Bienes Raíces" width={120}/>
       </a>
       <div class="flex items-center md:hidden">
         <ToggleMenu/>
@@ -122,5 +128,34 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
         }
       </ul>
     </nav>
+    <div
+      class:list={[
+        {'ml-auto rtl:ml-0 rtl:mr-auto': position === 'left'},
+        'hidden md:self-center md:flex items-center md:mb-0 fixed w-full md:w-auto md:static justify-end left-0 rtl:left-auto rtl:right-0 bottom-0 p-3 md:p-0 md:justify-self-end',
+      ]}
+    >
+      <div class="items-center flex justify-between w-full md:w-auto">
+        <ul class="flex items-center gap-2 md:gap-0">
+          <li>
+            {showToggleTheme &&
+              <ToggleTheme iconClass="w-8 h-8 md:w-6 md:h-6 md:inline-block"/>}
+          </li>
+          <li>
+            <a href="https://wa.me/+51987654321"
+               class="text-muted dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center">
+              <Icon name="tabler:brand-whatsapp"
+                    class="w-8 h-8 md:w-6 md:h-6"/>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/profile.php?id=61559289243310&locale=es_LA"
+               class="text-muted dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center">
+              <Icon name="tabler:brand-facebook"
+                    class="w-8 h-8 md:w-6 md:h-6"/>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </header>
