--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '~/layouts/Layout.astro';
 import Header from '~/components/widgets/Header.astro';
-import Footer from '~/components/widgets/Footer.astro';
+import Footer2 from '~/components/widgets/Footer2.astro';
 import { headerData, footerData } from '~/navigation';
 
 import type { MetaData } from '~/types';
@@ -21,6 +21,6 @@ const { metadata } = Astro.props;
     <slot />
   </main>
   <slot name="footer">
-    <Footer {...footerData} />
+    <Footer2 />
   </slot>
 </Layout>
