--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,14 @@ import Layout from '~/layouts/PageLayout.astro';
 
 import Hero from '~/components/widgets/Hero.astro';
 import Features from '~/components/widgets/Features.astro';
-import Features2 from '~/components/widgets/Features2.astro';
 import Steps from '~/components/widgets/Steps.astro';
 import Content from '~/components/widgets/Content.astro';
-import BlogLatestPosts from '~/components/widgets/BlogLatestPosts.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
+import PropertyCard2 from '~/components/widgets/PropertyCard2.astro';
+import HeadLine from '~/components/ui/Headline.astro';
+import CardPost from '~/components/ui/CardPost.astro'
+import imagenPost1 from '../assets/images/blog/escoger-propiedad.jpg';
+import imagenPost2 from '../assets/images/blog/invertir-propiedades-comerciales.jpg';
 
 const metadata = {
   title: 'EHR Bienes Raíces',
@@ -16,9 +19,7 @@ const metadata = {
 ---
 
 <Layout metadata={metadata}>
-
   <Hero/>
-
   <Features
     id="features"
     tagline="Beneficios"
@@ -131,50 +132,10 @@ const metadata = {
       alt: 'Blueprint Image',
     }}
   >
-    <Fragment slot="content">Ensure your online presence truly represents you.</Fragment>
-
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
   </Content>
-
-  <Content
-    isReversed
-    isAfterContent
-    items={[
-      {
-        title: 'Planificación',
-        description:
-          'Captivate your audience with interactive elements, intuitive navigation, and visually appealing layouts, encouraging longer visits.',
-      },
-      {
-        title: 'Enlaces',
-        description:
-          'Ensure your website stays aligned with the latest trends and technologies through regular updates and enhancements.',
-      },
-      {
-        title: 'Visitas guiadas',
-        description:
-          'Skip the time-consuming process of building a website from scratch and launch your online presence sooner with AstroWind.',
-      },
-      {
-        title: 'Eventos de socios',
-        description: `Join the growing AstroWind community for insights, resources, and assistance, ensuring you're never alone on your web development journey.`,
-      },
-    ]}
-    image={{
-      src: '~/assets/images/inversiones.jpg',
-      alt: 'Astronauts Image',
-    }}
-  >
-    <Fragment slot="content">Designed to foster growth and success.</Fragment>
-
-    <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
-    </Fragment>
-  </Content>
-
-  <!-- Steps Widget ****************** -->
 
   <Steps
     title="Adquiere tu propiedad en el menor tiempo."
@@ -208,100 +169,69 @@ const metadata = {
     }}
   />
 
-  <!-- Features2 Widget ************** -->
+  <HeadLine tagline="PROPIEDADES" title="Nuestras mejores ofertas"/>
+  <div class="grid p-5 sm:gap-y-8 lg:grid-cols-3 sm:grid-cols-2 gap-4 md:gap-6 mb-16">
+    <PropertyCard2 id="001" imagen="~/assets/images/propiedades/venta/casa/casa-venta-paracas.jpg"
+                   especificaciones="Zona junto a pista, en esquina, totalmente urbanizada"
+                   precioBaseSoles={170_000}
+                   precioBaseDolares={44391.05} tipo="casa"
+                   disponibilidad="venta"
+                   ubicacion="Ica, Pisco, Paracas"
+                   areaTotal={182} areaConstruida={50}/>
 
-  <Features2
-    title="Most used widgets"
-    subtitle="Provides frequently used components for building websites using Tailwind CSS"
-    tagline="Components"
-    items={[
-      {
-        title: 'Headers',
-        description: "Ever tried driving without GPS? Boom! That's why websites need headers for direction.",
-        icon: 'flat-color-icons:template',
-      },
-      {
-        title: 'Heros',
-        description:
-          "Picture a superhero landing – epic, right? That's the job of a Hero section, making grand entrances!",
-        icon: 'flat-color-icons:gallery',
-      },
-      {
-        title: 'Features',
-        description:
-          'Where websites strut their stuff and show off superpowers. No holding back on the bragging rights here!',
-        icon: 'flat-color-icons:approval',
-      },
-      {
-        title: 'Content',
-        description:
-          "Dive into the meat and potatoes of a site; without it, you'd just be window shopping. Content is king.",
-        icon: 'flat-color-icons:document',
-      },
-      {
-        title: 'Call-to-Action',
-        description:
-          'That enthusiastic friend who\'s always urging, "Do it! Do it!"? Yeah, that\'s this button nudging you towards adventure.',
-        icon: 'flat-color-icons:advertising',
-      },
-      {
-        title: 'Pricing',
-        description: 'Behold the dessert menu of the website world. Tempting choices await, can you resist?',
-        icon: 'flat-color-icons:currency-exchange',
-      },
-      {
-        title: 'Testimonial',
-        description: 'Step into the gossip corner! Here, other visitors spill the beans and share the juicy details.',
-        icon: 'flat-color-icons:voice-presentation',
-      },
-      {
-        title: 'Contact',
-        description:
-          'Like a digital mailbox, but faster! Drop a line, ask a question, or send a virtual high-five. Ding! Message in.',
-        icon: 'flat-color-icons:business-contact',
-      },
-      {
-        title: 'Footers',
-        description: "The footer's like the credits of a movie but sprinkled with easter eggs. Time to hunt!",
-        icon: 'flat-color-icons:database',
-      },
-    ]}
-  >
-    <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
-    </Fragment>
-  </Features2>
+    <PropertyCard2 id="002"
+                   imagen="~/assets/images/propiedades/venta/terreno-cultivo/terreno-cultivo-supe-01.jpg"
+                   especificaciones="Tierras arenosas, agua extraída"
+                   precioBaseSoles={70_000}
+                   precioBaseDolares={18278.67} tipo="terreno de cultivo"
+                   disponibilidad="venta"
+                   ubicacion="Lima, Barranca, Supe"
+                   areaTotal={10_063} areaConstruida={0}/>
 
-  <!-- HighlightedPosts Widget ******* -->
+    <PropertyCard2 id="003"
+                   imagen="~/assets/images/propiedades/venta/terreno/terreno-irregular-huaraz.jpg"
+                   especificaciones="A 10 MINUTOS DE LA CIUDAD, YA URBANIZADO, FRENTE DE 25.4 M"
+                   precioBaseSoles={1500}
+                   precioBaseDolares={391.69} tipo="terreno"
+                   disponibilidad="venta"
+                   ubicacion="Áncash, Huaraz, Toclla"
+                   areaTotal={1747} areaConstruida={0}/>
+  </div>
 
-  <BlogLatestPosts
-    title="Find out more content in our Blog"
-    information={`The blog is used to display AstroWind documentation.
-                        Each new article will be an important step that you will need to know to be an expert in creating a website using Astro + Tailwind CSS.
-                        Astro is a very interesting technology. Thanks.
-                `}
-  />
+  <HeadLine tagline="BLOG" title="TENEMOS ALGUNOS POSTS"/>
+
+  <div class="p-5 grid gap-6 row-gap-5 md:grid-cols-2 lg:grid-cols-4">
+    <CardPost titulo="Aprende cómo escoger tu propiedad"
+              descripcion="Escoger una propiedad de bienes raíces requiere un análisis cuidadoso y detallado de varios factores clave. Primero, es importante considerar la ubicación, evaluando aspectos como la proximidad a servicios esenciales, zonas comerciales, escuelas y transporte público. Además, es fundamental revisar el estado físico de la propiedad, incluyendo su estructura, instalaciones y posibles necesidades de reparación."
+              src={imagenPost1}
+              href="/aprende-como-escoger-tu-propiedad"
+    />
+    <CardPost titulo="Los Beneficios de Invertir en Propiedades Comerciales"
+              descripcion="Invertir en propiedades comerciales es una excelente manera de diversificar tu portafolio y asegurar ingresos estables a largo plazo. A continuación, exploramos algunos de los beneficios clave de este tipo de inversión."
+              src={imagenPost2}
+              href="/los-beneficios-de-invertir-en-propiedades-comerciales"
+    />
+
+  </div>
 
   <CallToAction
     actions={[
       {
         variant: 'primary',
-        text: 'Get template',
-        href: 'https://github.com/onwidget/astrowind',
-        target: '_blank',
-        icon: 'tabler:download',
+        text: 'Contáctanos',
+        href: 'tel:+987654321',
+        target: '',
+        icon: 'tabler:phone-outgoing',
       },
     ]}
   >
     <Fragment slot="title">
-      Astro&nbsp;+&nbsp;<br class="block sm:hidden"/><span
-      class="sm:whitespace-nowrap">Tailwind CSS</span>
+      <span
+        class="sm:whitespace-nowrap">No busques más</span>
     </Fragment>
 
     <Fragment slot="subtitle">
-      Be very surprised by these huge fake numbers you are seeing on this page. <br
-      class="hidden md:inline"/>Don't
-      waste more time! :P
+      Sé parte de nuestro clientes satisfechos y disfruta de todos los beneficios.
     </Fragment>
   </CallToAction>
 </Layout>
