--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -2,7 +2,7 @@
 import Video from '~/assets/videos/hero.mp4';
 ---
 
-<section class="relative h-screen overflow-hidden">
+<section class="relative h-screen overflow-hidden mb-10">
   <video autoplay muted loop class="absolute top-0 left-0 w-full h-full object-cover">
     <source src={Video} type="video/mp4"/>
     Tu navegador no soporta video.
