--- a/src/components/widgets/Footer2.astro
+++ b/src/components/widgets/Footer2.astro
@@ -1,7 +1,7 @@
 ---
 import {Icon} from "astro-icon/components";
 ---
-<footer class="bg-gray-100 dark:bg-gray-800 py-10 px-4">
+<footer class="bg-gray-100 dark:bg-slate-950 py-10 px-4">
   <div class="container mx-auto px-6">
     <div class="flex flex-col md:flex-row justify-between items-center">
       <div class="flex items-center mb-6 md:mb-0">
